# Reproduced-RoseMM

./: CMakeLists.txt  README.md
include/: ordering.hpp  parallel-matmul.hpp  rose-mm.hpp  rs-estimator.hpp  sub-chain-sparsity-estimator.hpp
include/common/: matrix.hpp
src/estimator/: rs-estimator.cpp  sub-chain-sparsity-estimator.cpp
src/multiplication/: parallel-matmul.cpp
src/ordering/: ordering.cpp
src/rose-mm/: rose-mm.cpp
src/rose_mm/: rose_mm.cpp
test/: CMakeLists.txt  parallel-matmul-test.cpp  rose-mm-test.cpp  rs_estimator_test.cpp  smcm-ordering-test.cpp  smcm_ordering_test.cpp  sub-chain-sparsity-test.cpp
